src/pages/styles/home.css
.home_main {
  width: 100%;
  color: rgb(23, 23, 99);
}

.home_main .parent {
  padding: 0 var(--size4);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.home_main .first_section {
  display: flex;
  flex-direction: column;
  gap: var(--size-large);
  position: relative;
  z-index: 1;
  padding-left: 3rem;
}

.home_main .first_section .developer_image {
  width: 35rem;
  height: 22rem;
  position: absolute;
  right: 0;
  z-index: -1;
}

.home_main .first_section .responsiveness_image {
  display: none;
}

.home_main .first_section h1 {
  font-size: var(--size-large1);
}

.home_main .first_section .description {
  font-size: var(--size5);
  font-weight: 500;
  color: var(--dark5);
}

.home_main .first_section .description .name {
  background: linear-gradient(to right, rgb(27, 27, 27), rgb(2, 2, 2));
  border-radius: var(--size2);
  color: var(--white2);
  padding: 1px 4px;
  font-size: var(--favorite);
  margin: var(--size1);
}

.second_section .email_me {
  margin-top: var(--size-large1);
  font-size: var(--favorite);
  font-weight: 700;
  padding-left: 3rem;
}

.second_section .email_me .get_in_touch {
  margin-left: 2px;
}

.second_section .email_me .get_in_touch:hover {
  text-decoration: none;
}

.third_section {
  padding-top: 10rem;
  padding-left: 2rem;
  padding-bottom: 3rem;
}

.third_section .container {
  display: flex;
  flex-direction: column;
  gap: 8rem;
}

.third_section h1 {
  width: fit-content;
  font-family: "Mulish", sans-serif;
  font-optical-sizing: auto;
  font-weight: 1000;
  font-style: normal;
  color: rgb(23, 23, 99);
  text-decoration: underline;
  text-decoration-line: underline;
  text-decoration-color: rgb(228, 91, 0);
  text-decoration-thickness: 20px;
  text-decoration-style: solid;
  transition: text-decoration 0.5s ease;
}

.third_section h1:hover {
  text-decoration-thickness: 5px;
  text-decoration-color: rgb(190, 58, 58);
  cursor: text;
}

.third_section .background {
  display: flex;
  gap: 6rem;
}

.third_section .background .background_desc {
  font-family: "Montserrat", sans-serif;
  font-size: 1.2rem;
  padding-top: 1.5rem;
}

.third_section .background .background_desc .degree {
  padding-left: 0.5rem;
  font-weight: bolder;
}

.third_section .background .background_desc .hobbies {
  font-weight: bolder;
}

.third_section .background .background_desc .resume {
  display: inline-block;
  margin-top: 1rem;
  padding-right: 2px;
  color: rgb(23, 23, 99);
  font-weight: 600;
}

.third_section .background .background_desc .resume:hover {
  padding-left: 0.5px;
  font-size: 1.3rem;
  color: rgb(13, 13, 189);
}

.read_more {
  display: block;
  color: blue;
  text-decoration: none;
  margin-top: 0.5rem;
}

.read_more:hover {
  color: rgb(13, 13, 189);
}

.third_section .skills {
  display: flex;
  gap: 8.5rem;
  font-family: "Montserrat", sans-serif;
}

.third_section .skills ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  gap: 2rem;
  list-style: none;
}

.third_section .skills li {
  position: relative;
  list-style: none;
  background: #121e27;
  color: #fff;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 0.25rem 1rem 0;
  font-size: 1.2rem;
  font-weight: 700;
  padding: 0.5rem 0.8rem;
  border-radius: 3px;
  cursor: text;
}

.third_section .skills li span {
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  font-family: "Mulish", sans-serif;
  font-size: 1.2rem;
  font-weight: 900;
  color: rgb(26, 25, 25) !important;
  text-align: center;
  padding: 0.5rem 0.8rem;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -60px;
}

.frontend {
  background-color: yellow;
}

.backend {
  background-color: #728e39;
}

.third_section .skills li:hover span {
  cursor: text;
  visibility: visible;
}

.third_section .skills li article header {
  width: 100%;
  background-color: red;
  display: flex;
  gap: 10px;
}

.third_section .skills li article header div {
  background-color: yellow;
  width: 25%;
  height: 3rem;
}

.third_section .skills li article header div img {
  width: 100%;
  height: 100%;
}

.third_section .skills li span {
  color: rgb(23, 23, 99);
  font-size: 1.1rem;
}

.third_section .skills li span:hover {
  color: rgb(13, 13, 189);
}

.third_section .projects {
  font-family: "Montserrat", sans-serif;
  color: var(--dark4);
}

.third_section .projects h1 {
  color: rgb(23, 23, 99);
  margin-bottom: 4rem;
}

.third_section .projects .projects-desc {
  display: flex;
  flex-direction: column;
  gap: 10rem;
}

.third_section .projects .project_desc {
  max-width: 100%;
  display: flex;
  justify-content: space-between;
  gap: 10rem;
  padding-right: 4rem;
}

.third_section .projects .project ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  white-space: pre-wrap;
  gap: 2rem;
}

.third_section .projects ul li {
  max-width: 100%;
  font-weight: normal;
  font-weight: 600;
  font-size: 1.3rem;
}

.third_section .projects ul .role {
  font-weight: 500;
  font-size: 1.3rem;
}

.third_section .projects ul .title {
  font-family: "Mulish", sans-serif;
  font-weight: 1000;
  font-size: 2.5rem;
  color: #1d2327;
}

.third_section .projects ul li ol {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  white-space: pre-wrap;
  gap: 12px;
}

.third_section .projects ul li ol li {
  font-weight: 400;
  font-size: 1.1rem;
  background-color: #121e27;
  padding: 0.5rem 0.5rem;
  color: #fff;
  border-radius: 3px;
}

.third_section .projects ul li p {
  font-family: "Mulish", sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.5;
}

.third_section .projects .project {
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.third_section .projects .project a {
  align-self: center;
  text-decoration: none;
  border-radius: 40px;
  transition: transform 0.3s ease-in-out 0s, box-shadow 0.2s ease-in-out 0s;
}

.third_section .projects .project a img {
  max-width: 700px;
  border-radius: 40px;
}

.view-project-container {
  width: fit-content;
  background-color: transparent;
  border: 1px solid #1d2327;
  margin-left: 16rem;
}

.third_section .projects .project .view-project {
  text-decoration: none;
  position: relative;
  display: block;
  width: inherit;
}

.third_section .projects .project .view-project .button {
  border: none !important;
  border-radius: 0 !important;
  color: #fff;
  background-color: rgb(245, 102, 8);
  font-family: "Mulish", sans-serif;
  font-weight: 500;
  font-size: 1.6rem;
  font-style: normal;
  width: fit-content;
  align-self: flex-start;
  padding: 1.2rem 2rem;
  cursor: pointer;
  color: rgb(255, 255, 255);
  z-index: 100;
  transform: translate3d(-14px, -14px, 0px) scale3d(1, 1, 1) rotateX(0deg)
    rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
  transition: transform 0.2s ease-in-out 0s;
}

.third_section .projects .project .view-project:hover .button {
  transform: translate3d(0, 0, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg)
    rotateZ(0deg) skew(0deg, 0deg);
}

.third_section .other-projects {
  font-size: 1.5rem;
}
.third_section .other-projects a {
  font-weight: bold;
  color: var(--dark4);
  font-size: 1.4rem;
  padding: 0 10px;
}

.third_section .other-projects a:hover {
  font-size: var(--size5);
}

@media screen and (max-width: 1500px) {
  .third_section .skills ul {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .third_section .projects .project_desc {
    gap: 3rem;
  }
  .third_section .projects .project_desc ul {
    max-width: 40%;
  }
  .third_section .projects .project a img {
    max-width: 550px;
    min-height: 300px;
  }
}

@media screen and (max-width: 1230px) {
  .home_main {
    padding: 2rem;
  }

  .third_section .skills ul {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .third_section .projects .projects-desc {
    gap: 4rem;
  }

  .projects-desc {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
  }

  .project {
    flex: 0 0 calc(50% - 1rem); /* Adjust the width as needed */
  }

  .project_desc {
    display: flex;
    flex-direction: column;
  }

  .project_desc ul {
    max-width: 100% !important;
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .project_desc ul li {
    margin-bottom: 0.5rem; /* Add some spacing between each li element */
  }
}

@media screen and (max-width: 1028px) {
  .second_section .email_me .get_in_touch {
    display: flex;
    flex-direction: column;
    margin-left: 5px;
  }
  .home_main .first_section .developer_image {
    top: 8rem;
  }

  .third_section {
    padding-top: 6rem;
    padding-left: 8rem;
  }
}

@media screen and (max-width: 978px) {
  .home_main {
    padding: 2px;
  }
  .third_section {
    padding-top: 10rem;
    padding-left: 6rem;
  }

  .third_section .container {
    gap: 4rem;
  }
  .third_section .background {
    gap: 4rem;
  }

  .third_section .background .background_desc {
    padding-right: 1rem;
  }

  .third_section .skills ul {
    grid-template-columns: 1fr 1fr;
  }

  .third_section .projects {
    gap: 4rem;
  }

  .third_section .projects .project_desc {
    gap: 3rem;
    padding: 0;
  }
}

@media screen and (max-width: 828px) {
  .home_main .first_section .developer_image {
    top: 12rem;
    width: 20rem;
    height: 16rem;
  }
}

@media screen and (max-width: 768px) {
  .third_section {
    padding-top: 4rem;
    padding-left: 0;
  }

  .third_section .background {
    flex-direction: column;
    gap: 2rem;
  }

  .third_section .background .background_desc {
    font-family: "Montserrat", sans-serif;
    font-size: 1.2rem;
    padding-top: 0.5rem;
  }

  .third_section .skills {
    flex-direction: column;
    gap: 5rem;
  }

  .third_section .skills h1 {
    align-self: center;
  }

  .third_section .projects {
    display: flex;
    flex-direction: column;
  }

  .third_section .projects h1 {
    align-self: center;
  }

  .third_section .projects .project_desc {
    gap: 2rem;
    padding: 0;
  }

  .third_section .projects .project ul {
    justify-content: center;
    align-items: center;
  }

  .third_section .projects ul li {
    display: flex;
    flex-wrap: wrap;
  }
}

@media screen and (max-width: 600px) {
  .home_main .parent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 9rem;
    margin-top: 8rem;
    padding: 0;
    margin: 0;
  }

  .image_cont {
    align-self: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .third_section .projects .project a .image_div {
    padding: 0 10px;
  }

  .third_section .projects .project a .image_div img {
    max-width: 100%;
    height: auto;
  }

  .view-project-container {
    margin-left: 6rem;
  }

  .second_section .email_me .get_in_touch {
    margin-left: 0;
  }

  .home_main .first_section .developer_image {
    display: none;
  }
  .home_main .first_section .responsiveness_image {
    width: 20rem;
    height: 14rem;
    display: block;
    position: absolute;
    top: 13rem;
    right: 0;
    z-index: -1;
  }
}
@media screen and (max-width: 530px) {
  .home_main .parent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 9rem;
    margin-top: 8rem;
    padding: 0;
    margin: 0;
  }

  .second_section .email_me .get_in_touch {
    margin-left: 0;
  }

  .home_main .first_section .developer_image {
    display: none;
  }
  .home_main .first_section .responsiveness_image {
    width: 20rem;
    height: 14rem;
    display: block;
    position: absolute;
    top: 18rem;
    z-index: -1;
  }
}

@media screen and (max-width: 400px) {
  .home_main .parent {
    gap: 10.5rem;
  }
  .home_main .first_section .responsiveness_image {
    width: 16rem;
  }
  .home_main .first_section .responsiveness_image {
    top: 20rem;
    z-index: -1;
  }
}

